@@ -19,6 +19,7 @@ CHANGELOG
 * Fix display of POI layer by default on list (fixes #696)
 * Fix translation of not validated paths (fixes #730)
 * Fix error if topology is required and empty (fixes #745)
+* Fix duplication of N-N relations on path split (fixes #738)
 * Upgraded to Django 1.5
 
 :notes:
